--- a/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/SubViews/AutoSyncSwitcherTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/SubViews/AutoSyncSwitcherTableViewCell.xib
@@ -10,11 +10,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AutoSyncSwitcherTableViewCell" rowHeight="72" id="KGk-i7-Jjw" customClass="AutoSyncSwitcherTableViewCell" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="335" height="59"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AutoSyncSwitcherTableViewCell" rowHeight="77" id="KGk-i7-Jjw" customClass="AutoSyncSwitcherTableViewCell" customModule="Billo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="335" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="335" height="59"/>
+                <rect key="frame" x="0.0" y="0.0" width="335" height="64"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="autoSync" translatesAutoresizingMaskIntoConstraints="NO" id="aML-HQ-bLC">
@@ -22,10 +22,10 @@
                         <color key="tintColor" name="blackColor"/>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="CSf-z8-Lzn">
-                        <rect key="frame" x="50" y="16" width="41.5" height="20.5"/>
+                        <rect key="frame" x="50" y="20" width="41.5" height="13"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKR-Br-K8d">
-                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="13"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -55,9 +55,10 @@
                     <constraint firstAttribute="trailing" secondItem="2qo-KL-FfO" secondAttribute="trailing" constant="16" id="FB2-pX-Fba"/>
                     <constraint firstAttribute="trailing" secondItem="2qo-KL-FfO" secondAttribute="trailing" constant="16" id="Jy8-Vc-FhS"/>
                     <constraint firstItem="aML-HQ-bLC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="19" id="OnL-cx-vVv"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="CSf-z8-Lzn" secondAttribute="bottom" constant="20" id="Yf7-w9-A8t"/>
                     <constraint firstItem="CSf-z8-Lzn" firstAttribute="leading" secondItem="aML-HQ-bLC" secondAttribute="trailing" constant="8" id="ZsE-bY-3rG"/>
                     <constraint firstItem="2qo-KL-FfO" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="CSf-z8-Lzn" secondAttribute="trailing" constant="8" id="e3b-PW-Hme"/>
-                    <constraint firstItem="CSf-z8-Lzn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="qiO-KL-pI4"/>
+                    <constraint firstItem="CSf-z8-Lzn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="qiO-KL-pI4"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -66,7 +67,7 @@
                 <outlet property="switcher" destination="2qo-KL-FfO" id="41d-gM-GJe"/>
                 <outlet property="titleLabel" destination="gKR-Br-K8d" id="SYE-L3-Z6f"/>
             </connections>
-            <point key="canvasLocation" x="39.200000000000003" y="67.916041979010501"/>
+            <point key="canvasLocation" x="39.200000000000003" y="63.868065967016499"/>
         </tableViewCell>
     </objects>
     <resources>
