--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/SharingInfo/FileInfoShareView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/SharingInfo/FileInfoShareView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -58,7 +58,7 @@
                         <constraint firstAttribute="height" constant="45" id="Gkx-Q2-zTO"/>
                         <constraint firstAttribute="width" constant="45" id="UaF-IU-SUZ"/>
                     </constraints>
-                    <state key="normal" image="Arrow"/>
+                    <state key="normal" image="iconArrowRightsmall"/>
                     <connections>
                         <action selector="onArrowTapped" destination="iN0-l3-epB" eventType="touchUpInside" id="rJT-Qr-9Yh"/>
                     </connections>
@@ -93,7 +93,7 @@
         </view>
     </objects>
     <resources>
-        <image name="Arrow" width="8" height="12"/>
+        <image name="iconArrowRightsmall" width="24" height="24"/>
         <namedColor name="itemSeperator">
             <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
