--- a/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationViewController/Headers/InvitationCollectionReusableView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationViewController/Headers/InvitationCollectionReusableView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -49,7 +49,7 @@
                             <color key="textColor" name="lrBrownishGrey"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow" translatesAutoresizingMaskIntoConstraints="NO" id="FOr-5p-qUe">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconArrowRightsmall" translatesAutoresizingMaskIntoConstraints="NO" id="FOr-5p-qUe">
                             <rect key="frame" x="353" y="22" width="8" height="12"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="12" id="Itt-aU-41k"/>
@@ -230,7 +230,7 @@
                                 <constraint firstAttribute="width" constant="38" id="Omv-BH-YuB"/>
                             </constraints>
                             <inset key="imageEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            <state key="normal" image="Arrow"/>
+                            <state key="normal" image="iconArrowRightsmall"/>
                             <connections>
                                 <action selector="invitationListButtonTapped:" destination="U6b-Vx-4bR" eventType="touchUpInside" id="U05-A3-0D0"/>
                             </connections>
@@ -306,10 +306,10 @@
         </collectionReusableView>
     </objects>
     <resources>
-        <image name="Arrow" width="8" height="12"/>
         <image name="copy-link" width="20" height="24"/>
+        <image name="iconArrowRightsmall" width="24" height="24"/>
         <namedColor name="darkBlueAndTealish">
-            <color red="0.019608000293374062" green="0.17647099494934082" blue="0.26274499297142029" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.019999999552965164" green="0.17599999904632568" blue="0.2630000114440918" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="darkBorder">
             <color red="0.59200000762939453" green="0.59200000762939453" blue="0.59200000762939453" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
