--- a/Depo/Depo/Presentation/UserStories/Settings/PaycellCampaign/PaycellCampaignViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/PaycellCampaign/PaycellCampaignViewController.xib
@@ -75,7 +75,7 @@
                                             <color key="textColor" name="lrBrownishGrey"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow" translatesAutoresizingMaskIntoConstraints="NO" id="Urd-NV-hrw">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconArrowRightsmall" translatesAutoresizingMaskIntoConstraints="NO" id="Urd-NV-hrw">
                                             <rect key="frame" x="392" y="22" width="8" height="12"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="8" id="RlR-ir-LmH"/>
@@ -334,7 +334,7 @@
                                                 <constraint firstAttribute="width" constant="38" id="hwn-FB-qst"/>
                                             </constraints>
                                             <inset key="imageEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                            <state key="normal" image="Arrow"/>
+                                            <state key="normal" image="iconArrowRightsmall"/>
                                             <connections>
                                                 <action selector="onSeeAllPeopleButton:" destination="-1" eventType="touchUpInside" id="BLe-7j-jEW"/>
                                             </connections>
@@ -384,8 +384,8 @@
         </view>
     </objects>
     <resources>
-        <image name="Arrow" width="8" height="12"/>
         <image name="copy-link" width="20" height="24"/>
+        <image name="iconArrowRightsmall" width="24" height="24"/>
         <namedColor name="darkBlueAndTealish">
             <color red="0.019999999552965164" green="0.17599999904632568" blue="0.2630000114440918" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
