--- a/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SelectQuestionViewController/SelectQuestionViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SelectQuestionViewController/SelectQuestionViewController.xib
@@ -44,7 +44,7 @@
                                         <constraint firstAttribute="width" constant="22" id="Nnl-za-kTo"/>
                                         <constraint firstAttribute="height" constant="22" id="aJb-1l-1Gg"/>
                                     </constraints>
-                                    <state key="normal" image="arrow_up"/>
+                                    <state key="normal" image="iconArrowUpSmall"/>
                                     <connections>
                                         <action selector="closeButtonTapped:" destination="-1" eventType="touchUpInside" id="zVd-bL-ZsC"/>
                                     </connections>
@@ -108,7 +108,7 @@
         </view>
     </objects>
     <resources>
-        <image name="arrow_up" width="24" height="24"/>
+        <image name="iconArrowUpSmall" width="24" height="24"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
