--- a/Depo/Depo/Presentation/UserStories/Settings/Settings/Cells/SettingsTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Settings/Cells/SettingsTableViewCell.xib
@@ -26,7 +26,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconArrowRight" translatesAutoresizingMaskIntoConstraints="NO" id="zww-Vg-7eJ">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconArrowRightsmall" translatesAutoresizingMaskIntoConstraints="NO" id="zww-Vg-7eJ">
                         <rect key="frame" x="278" y="18.5" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="24" id="JKO-Pz-j2U"/>
@@ -61,7 +61,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="iconArrowRight" width="24" height="24"/>
+        <image name="iconArrowRightsmall" width="24" height="24"/>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
