--- a/Depo/Depo/Presentation/UserStories/Settings/UserInfoSubView/View/UserInfoSubViewViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/UserInfoSubView/View/UserInfoSubViewViewController.xib
@@ -75,7 +75,7 @@
                                 <constraint firstAttribute="width" constant="24" id="yBO-QE-DeR"/>
                             </constraints>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                            <state key="normal" image="iconArrowRight"/>
+                            <state key="normal" image="iconArrowRightsmall"/>
                             <connections>
                                 <action selector="accountDetailsButton:" destination="-1" eventType="touchUpInside" id="pv7-NU-VZK"/>
                             </connections>
@@ -111,7 +111,7 @@
         </view>
     </objects>
     <resources>
-        <image name="iconArrowRight" width="24" height="24"/>
+        <image name="iconArrowRightsmall" width="24" height="24"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
