--- a/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarCards/Cards/SelectionTabBarCard/SelectionTabBarCard.xib
+++ b/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarCards/Cards/SelectionTabBarCard/SelectionTabBarCard.xib
@@ -7,6 +7,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GT-America-LC-Standard-Regular.ttf">
+            <string>GTAmericaLC-Rg</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -15,23 +20,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hnX-uA-jzJ">
-                    <rect key="frame" x="16" y="16" width="343" height="29.5"/>
+                    <rect key="frame" x="16" y="16" width="343" height="41"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="06w-4Y-ud3">
-                            <rect key="frame" x="0.0" y="0.0" width="171.5" height="29.5"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="20" id="tlK-Fr-Nff"/>
-                            </constraints>
+                            <rect key="frame" x="0.0" y="0.0" width="171.5" height="41"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cc3-fL-OnY" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="171.5" y="0.0" width="171.5" height="29.5"/>
+                            <rect key="frame" x="171.5" y="0.0" width="171.5" height="41"/>
+                            <fontDescription key="fontDescription" name="GTAmericaLC-Rg" family="GT America LC" pointSize="12"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" title="Button">
-                                <fontDescription key="titleFontDescription" name="GTAmericaLC-Rg" family="GT America LC" pointSize="12"/>
-                            </buttonConfiguration>
                             <connections>
                                 <action selector="onCancelButton:" destination="skR-5j-XgK" eventType="touchUpInside" id="Qim-e1-Zzl"/>
                             </connections>
