--- a/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouCollectionViewCell.xib
@@ -17,23 +17,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cFq-m7-2Ne">
-                        <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconAlbum" translatesAutoresizingMaskIntoConstraints="NO" id="BN8-rJ-ThL">
-                                <rect key="frame" x="54" y="54" width="32" height="32"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="32" id="6YH-aP-JKo"/>
-                                    <constraint firstAttribute="height" constant="32" id="BLB-P6-8PG"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="BN8-rJ-ThL" firstAttribute="centerX" secondItem="cFq-m7-2Ne" secondAttribute="centerX" id="UVE-lX-vRT"/>
-                            <constraint firstItem="BN8-rJ-ThL" firstAttribute="centerY" secondItem="cFq-m7-2Ne" secondAttribute="centerY" id="z0v-VV-Jbg"/>
-                        </constraints>
-                    </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eh9-cA-xIe">
                         <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
                         <constraints>
@@ -41,45 +24,20 @@
                             <constraint firstAttribute="width" secondItem="eh9-cA-xIe" secondAttribute="height" multiplier="1:1" id="gkk-Vx-Ani"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q6S-kX-bO1">
-                        <rect key="frame" x="11" y="104" width="118" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconHideUnselect" translatesAutoresizingMaskIntoConstraints="NO" id="2ao-ps-DD7">
-                        <rect key="frame" x="106" y="8" width="26" height="26"/>
-                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="cFq-m7-2Ne" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="11n-cX-l8n"/>
                 <constraint firstItem="eh9-cA-xIe" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="8Jk-Zi-5SB"/>
                 <constraint firstItem="eh9-cA-xIe" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="96c-8m-H9t"/>
-                <constraint firstAttribute="trailing" secondItem="cFq-m7-2Ne" secondAttribute="trailing" id="AKV-XP-E6E"/>
-                <constraint firstAttribute="trailing" secondItem="2ao-ps-DD7" secondAttribute="trailing" constant="8" id="AU1-pq-xVw"/>
                 <constraint firstAttribute="trailing" secondItem="eh9-cA-xIe" secondAttribute="trailing" id="D0L-Dy-ju9"/>
-                <constraint firstItem="cFq-m7-2Ne" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="O6p-GX-j4k"/>
-                <constraint firstAttribute="bottom" secondItem="q6S-kX-bO1" secondAttribute="bottom" constant="15" id="OqM-M0-9xl"/>
-                <constraint firstAttribute="trailing" secondItem="q6S-kX-bO1" secondAttribute="trailing" constant="11" id="TGC-4y-Bao"/>
-                <constraint firstItem="q6S-kX-bO1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="11" id="X3p-GT-962"/>
-                <constraint firstItem="2ao-ps-DD7" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="fXt-Xu-Xhf"/>
                 <constraint firstAttribute="bottom" secondItem="eh9-cA-xIe" secondAttribute="bottom" id="tJC-Ro-vym"/>
-                <constraint firstAttribute="bottom" secondItem="cFq-m7-2Ne" secondAttribute="bottom" id="ypK-7R-Lra"/>
             </constraints>
             <size key="customSize" width="232" height="206"/>
             <connections>
-                <outlet property="emptyAlbumView" destination="cFq-m7-2Ne" id="oPz-bs-keO"/>
-                <outlet property="hiddenIcon" destination="2ao-ps-DD7" id="e1a-bV-dEv"/>
-                <outlet property="thumbnailImage" destination="eh9-cA-xIe" id="sZ5-kn-Hcs"/>
-                <outlet property="titleLabel" destination="q6S-kX-bO1" id="Yfn-k6-dsX"/>
+                <outlet property="thumbnailImage" destination="eh9-cA-xIe" id="DxR-oU-dKa"/>
             </connections>
             <point key="canvasLocation" x="269.56521739130437" y="174.10714285714286"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="iconAlbum" width="24" height="24"/>
-        <image name="iconHideUnselect" width="26" height="26"/>
-    </resources>
 </document>
