--- a/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouCardsCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouCardsCollectionViewCell.xib
@@ -61,12 +61,25 @@
                                                     <constraint firstAttribute="height" constant="220" id="rjP-bX-d9e"/>
                                                 </constraints>
                                             </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dzy-lz-z7q">
+                                                <rect key="frame" x="0.0" y="0.0" width="220" height="220"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="exclusiveTap" value="YES"/>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="onShowDetail:" destination="gTV-IL-0wX" eventType="touchUpInside" id="odc-8i-SeE"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="Dzy-lz-z7q" secondAttribute="trailing" id="0ei-K5-R9Q"/>
                                             <constraint firstItem="EuR-ig-b5T" firstAttribute="leading" secondItem="68W-ZR-Ga0" secondAttribute="leading" id="9rX-GB-r6A"/>
+                                            <constraint firstAttribute="bottom" secondItem="Dzy-lz-z7q" secondAttribute="bottom" id="FVH-XM-RGL"/>
+                                            <constraint firstItem="Dzy-lz-z7q" firstAttribute="leading" secondItem="68W-ZR-Ga0" secondAttribute="leading" id="HBM-es-JfB"/>
                                             <constraint firstAttribute="bottom" secondItem="EuR-ig-b5T" secondAttribute="bottom" id="Tqd-eU-TZQ"/>
                                             <constraint firstAttribute="trailing" secondItem="EuR-ig-b5T" secondAttribute="trailing" id="cpG-yX-MVL"/>
+                                            <constraint firstItem="Dzy-lz-z7q" firstAttribute="top" secondItem="68W-ZR-Ga0" secondAttribute="top" id="eHx-Qr-VDQ"/>
                                             <constraint firstItem="EuR-ig-b5T" firstAttribute="top" secondItem="68W-ZR-Ga0" secondAttribute="top" id="kTG-mf-guv"/>
                                         </constraints>
                                     </view>
@@ -80,11 +93,17 @@
                                                 </constraints>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <action selector="onLeftButton:" destination="gTV-IL-0wX" eventType="touchUpInside" id="UAn-Bv-JP9"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bdk-Xi-PGi">
                                                 <rect key="frame" x="110" y="0.0" width="110" height="20"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <action selector="onShareButton:" destination="gTV-IL-0wX" eventType="touchUpInside" id="uJV-IK-29K"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -120,7 +139,7 @@
                 <outlet property="cardThumbnailImage" destination="EuR-ig-b5T" id="38O-ZK-1LT"/>
                 <outlet property="cardTitleLabel" destination="978-8C-iOb" id="jxb-Ml-aaF"/>
                 <outlet property="closeButton" destination="Far-r9-Iqz" id="98B-2k-kpk"/>
-                <outlet property="saveButton" destination="m3c-8j-Dfg" id="WaU-cP-nHf"/>
+                <outlet property="leftButton" destination="m3c-8j-Dfg" id="5oE-Ed-uw0"/>
                 <outlet property="shareButton" destination="bdk-Xi-PGi" id="lhz-Sb-p0F"/>
                 <outlet property="thumbnailView" destination="68W-ZR-Ga0" id="pzT-I6-g9h"/>
             </connections>
